CORE-6332;Cleanup